<resources>
    <string name="app_name">IMSU</string>
    <string name="btn_Play">PLAY</string>
    <string name="btn_ScoreBoard">ScoreBoard</string>
    <string name="btn_Settings">Settings</string>
    <string name="btn_Help">Help</string>
    <string name="btn_Quit">Quit</string>
    <string name="btn_Ok">OK</string>
    <string name="btn_SelectLevel">Select Level</string>
    <string name="btn_NewGame">New Game</string>
    <string name="btn_Continue">Continue</string>
    <string name="message_enterName">Enter Your Name</string>
    <string name="warning_enterName">Give A Name First...</string>
    <string name="hint_Enter_your_name">Name..</string>
    <string name="txtView_title_play">PLAY</string>
    <string name="txtView_title_scoreboard">SCOREBOARD</string>
    <string name="txtView_title_settings">SETTINGS</string>
    <string name="txtView_title_help">HELP</string>
    <string name="txtView_title_selectLevel">SELECT LEVEL</string>
    <string name="txtView_title_enterYourName">Enter Your Name</string>
    <string name="txtView_title_newGame">NEW GAME</string>
    <string name="clicked_btn_Scoreboard">Clicked Scoreboard</string>
    <string name="clicked_btn_Settings">Clicked Settings</string>
    <string name="clicked_btn_Help">Clicked Help</string>
    <string name="clicked_btn_Play">Clicked Play</string>
    <string name="clicked_btn_SelectLevel">Clicked Select Level</string>
    <string name="clicked_btn_NewGame">Clicked New Game</string>
    <string name="clicked_btn_Quit">Clicked Quit</string>
    <string name="clicked_btn_Continue">Clicked Continue</string>
    <string name="clicked_btn_Back">Clicked Back</string>
    <string name="clicked_prism">Clicked Prism</string>
    <string name="clicked_blast">Clicked Blast</string>
    <string name="content_description_prism">Prism</string>
    <string name="level_completed">LEVEL COMPLETED</string>
    <string name="txt_nullValue_playerName" />
    <string name="txt_nullValue_playerScore" />
    <string name="content_description_skb">skb</string>
    <string name="content_description_star">Star</string>
    <string name="content_description_earth">Earth</string>
    <string name="content_description_lightbeam">LightBeam</string>
    <string name="content_description_rating_star">StarRating</string>
    <string name="btn_Blast">Blast</string>
    <string name="settings_audio_audio">Audio</string>
    <string name="settings_audio_SFX">SFX</string>
    <string name="settings_audio_music">Music</string>
    <string name="settings_audio_back">BACK</string>
    <string name="help_how_to_play">How to Play?</string>
    <string name="help_align_the_satelites_to_destroy_the_planet">Align the Satelites to Destroy the Planet</string>
    <string name="help_tap_objects_to_rotate">Tap Objects To Rotate</string>
    <string name="help_press_blast_to_win">Press \'BLAST\' to Win</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yourScore">Your Score</string>
    <string name="levelScore">(levelScore)</string>
    <string name="Next">NEXT</string>
    <string name="level">(level)</string>
    <string name="fragment_dialog">dialog</string>
    <string name="content_description_pointer">Ponter</string>
    <string name="content_description_blast">Blast</string>
    <string name="content_description_wormhole">WormHole</string>
    <string name="Retry">RETRY</string>
    <string name="level_failed">LEVEL FAILED</string>
    <string name="fragment_dialog_failed">dialog failed</string>
    <string name="L1">1</string>
    <string name="L2">2</string>
    <string name="L3">3</string>
    <string name="L4">4</string>
    <string name="log_clicked_view_prism">log_clicked_prism</string>
    <string name="log_clicked_skb">log_clicked_skb</string>
    <string name="clicked_skb">clicked_skb</string>
    <string name="btn_Next">Next Level</string>
    <string name="game_paused">GAME PAUSED</string>
    <string name="log_clicked_blast">log_clicked_blast</string>
    <string name="content_description_threeway">Threeway</string>
    <string name="content_description_moon">Moon</string>
    <string name="content_description_mars">Mars</string>
    <string name="log_clicked_threeway">log_clicked_threeway</string>
    <string name="clicked_threeway">clicked_threeway</string>
    <string name="content_description">Jupiter</string>
    <string name="content_description_bridge">Bridge</string>
    <string name="content_description_venus">Venus</string>
    <string name="content_description_planetx">PlanetX</string>
    <string name="log_clicked_bridge">log_clicked_bridge</string>
    <string name="clicked_bridge">clicked_bridge</string>

</resources>
