<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_background_gradient_game"
    tools:context=".FragmentLevelCompleted">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtView_levelCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/drawable_button_transparent"
        android:gravity="center|top|center_vertical"
        android:text="@string/level_completed"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/yourScore"
        android:textAlignment="textStart"
        android:textColor="@color/colorTextLight"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_nextLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_level" />

    <TextView
        android:id="@+id/txtView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/levelScore"
        android:textAlignment="textEnd"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_nextLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_level" />

    <Button
        android:id="@+id/btn_nextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/drawable_button_rounded"
        android:text="@string/Next"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtView_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/level"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_levelCompleted" />

</androidx.constraintlayout.widget.ConstraintLayout>