<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PlayLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Continue"
        app:layout_constraintBottom_toTopOf="@+id/btn_Quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loadNewGame"
        android:text="@string/btn_NewGame"
        app:layout_constraintBottom_toTopOf="@+id/btn_SelectLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Play" />

    <Button
        android:id="@+id/btn_SelectLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loadSelectLevel"
        android:text="@string/btn_SelectLevel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Quit" />
</androidx.constraintlayout.widget.ConstraintLayout>
