<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NewGameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_background_gradient">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:text="@string/txtView_title_newGame"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_enterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="224dp"
        android:layout_marginRight="16sp"
        android:text="@string/txtView_title_enterYourName"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText_newGame_playerName"
        android:layout_width="0dp"
        android:layout_height="80sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_Enter_your_name"
        android:inputType="textPersonName"
        android:labelFor="@id/txtView_enterName"
        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_oK_playerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_enterName"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_oK_playerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/drawable_button_rounded"
        android:text="@string/btn_Ok"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
