<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_background_gradient"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/drawable_button_rounded"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/btn_Play"
        android:textAlignment="textEnd"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ScoreBoard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/drawable_button_rounded"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/btn_ScoreBoard"
        android:textAlignment="textEnd"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_Continue" />

    <Button
        android:id="@+id/btn_Settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/drawable_button_rounded"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/btn_Settings"
        android:textAlignment="textEnd"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_NewGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_Continue" />

    <Button
        android:id="@+id/btn_Help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/drawable_button_rounded"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/btn_Help"
        android:textAlignment="textEnd"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_NewGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_Settings" />

    <Button
        android:id="@+id/btn_NewGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80sp"
        android:background="@drawable/drawable_button_rounded"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/btn_Quit"
        android:textAlignment="textEnd"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>